--- a/PracticeWebApp/appsettings.json
+++ b/PracticeWebApp/appsettings.json
@@ -5,5 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "RandomApi": "https://www.randomnumberapi.com/api/v1.0/random",
+  "Settings": {
+    "Blacklist": [
+      "ugly",
+      "null",
+      "fullish"
+    ]
+  }
+
+
+
 }
