--- a/PracticeWebApp/appsettings.json
+++ b/PracticeWebApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  
+
   "RandomApi": "https://www.randomnumberapi.com/api/v1.0/random",
   "Settings": {
     "Blacklist": [
@@ -14,7 +14,8 @@
       "null",
       "fullish"
     ]
-  }
+  },
+  "ParallelLimit": 5
 
 
 
